<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.schin.notas.LoginActivity">

    <EditText
        android:id="@+id/edtEmail"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtSenha"
        style="@style/AppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogar"
        style="@style/AppTheme.ButtomBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnPrimeiroAcesso"
        style="@style/AppTheme.ButtomBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/primeiro_acesso" />

</LinearLayout>
